Antlr4Generation/PrimeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/darrell/Projects/Prime/Antlr4Generation/Prime.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class PrimeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, INT=7, RTL=8, ASSIGN=9, 
		USER_OP=10, OP_VAR1=11, OP_VAR2=12, OP_VAR3=13, OP_READ_LIST=14, OP_READ_STR=15, 
		OP_FACT=16, OP_NEXT=17, OP_PREV=18, OP_ROUND=19, OP_NEGATE=20, OP_HEAD=21, 
		OP_TAIL=22, OP_DISTINCT=23, OP_FLATTEN=24, OP_PURGE=25, OP_REV=26, OP_SORT=27, 
		OP_ADD=28, OP_SUB=29, OP_DIV=30, OP_MUL=31, OP_MOD=32, OP_POW=33, OP_LOG=34, 
		OP_INC_RANGE=35, OP_RANGE=36, OP_SMALL=37, OP_BIG=38, OP_BIN_AND=39, OP_BIN_OR=40, 
		OP_BIN_XOR=41, OP_BIN_NOT=42, OP_LSHIFT=43, OP_RSHIFT=44, OP_LROTATE=45, 
		OP_RROTATE=46, OP_INDEX=47, OP_INDEX_END=48, OP_INDEX_OF=49, OP_FILT=50, 
		OP_NEG_FILT=51, OP_JUMP=52, OP_NEG_JUMP=53, OP_JUMP_BACK=54, OP_NEG_JUMP_BACK=55, 
		OP_COND=56, OP_NEG_COND=57, OP_LIST_DIFF=58, OP_INTERSECT=59, OUT_INV=60, 
		OUT_DEF=61, OUT_STR=62, OPMOD_POW=63, OPMOD_CUT=64, OPMOD_FOLD=65, WS=66, 
		NL=67;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_termSeq = 2, RULE_mulTerm = 3, RULE_atomTerm = 4, 
		RULE_forEachBlock = 5, RULE_forEachOperation = 6, RULE_baseNullaryOp = 7, 
		RULE_baseNumUnaryOp = 8, RULE_baseNumBinaryOp = 9, RULE_baseListUnaryOp = 10, 
		RULE_baseListBinaryOp = 11, RULE_opMods = 12, RULE_assignMods = 13, RULE_nullaryOp = 14, 
		RULE_numUnaryOp = 15, RULE_listUnaryOp = 16, RULE_binaryOp = 17, RULE_outMethod = 18;
	public static readonly string[] ruleNames = {
		"program", "line", "termSeq", "mulTerm", "atomTerm", "forEachBlock", "forEachOperation", 
		"baseNullaryOp", "baseNumUnaryOp", "baseNumBinaryOp", "baseListUnaryOp", 
		"baseListBinaryOp", "opMods", "assignMods", "nullaryOp", "numUnaryOp", 
		"listUnaryOp", "binaryOp", "outMethod"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", "'-\\u221E'", "'\\u221E'", "'('", "')'", null, "'$'", 
		"'='", "'\\u03BB'", "','", "';'", "'#'", "':_'", "':~'", "'\\u0393'", 
		"'++'", "'--'", "'+-'", "'~'", "'_<'", "'_>'", "'_*'", "'__'", "'_?'", 
		"'_~'", "'_@'", "'+'", "'-'", "'/'", "'*'", "'%'", "'**'", "'//'", "'\\u2026'", 
		"'..'", "'<'", "'>'", "'`&'", "'`|'", "'`^'", "'`~'", "'<<'", "'>>'", 
		"'<<<'", "'>>>'", "'@'", "'@>'", "'@#'", "'*?'", "'*?~'", "'?/'", "'?~/'", 
		"'?\\'", "'?~\\'", "'?'", "'?~'", "'\\'", "'&'", "'\"~'", "'\"\"'", "'\"'", 
		"'^'", "'`'", "'!'", null, "'\\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "INT", "RTL", "ASSIGN", "USER_OP", 
		"OP_VAR1", "OP_VAR2", "OP_VAR3", "OP_READ_LIST", "OP_READ_STR", "OP_FACT", 
		"OP_NEXT", "OP_PREV", "OP_ROUND", "OP_NEGATE", "OP_HEAD", "OP_TAIL", "OP_DISTINCT", 
		"OP_FLATTEN", "OP_PURGE", "OP_REV", "OP_SORT", "OP_ADD", "OP_SUB", "OP_DIV", 
		"OP_MUL", "OP_MOD", "OP_POW", "OP_LOG", "OP_INC_RANGE", "OP_RANGE", "OP_SMALL", 
		"OP_BIG", "OP_BIN_AND", "OP_BIN_OR", "OP_BIN_XOR", "OP_BIN_NOT", "OP_LSHIFT", 
		"OP_RSHIFT", "OP_LROTATE", "OP_RROTATE", "OP_INDEX", "OP_INDEX_END", "OP_INDEX_OF", 
		"OP_FILT", "OP_NEG_FILT", "OP_JUMP", "OP_NEG_JUMP", "OP_JUMP_BACK", "OP_NEG_JUMP_BACK", 
		"OP_COND", "OP_NEG_COND", "OP_LIST_DIFF", "OP_INTERSECT", "OUT_INV", "OUT_DEF", 
		"OUT_STR", "OPMOD_POW", "OPMOD_CUT", "OPMOD_FOLD", "WS", "NL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Prime.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PrimeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PrimeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PrimeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PrimeParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(PrimeParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(PrimeParser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 63672L) != 0)) {
				{
				State = 38;
				line();
				}
			}

			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NL) {
				{
				{
				State = 42;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 41;
					Match(NL);
					}
					}
					State = 44;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==NL );
				State = 46;
				line();
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 52;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermSeqContext termSeq() {
			return GetRuleContext<TermSeqContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutMethodContext outMethod() {
			return GetRuleContext<OutMethodContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			termSeq();
			State = 56;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8070450532247928832L) != 0)) {
				{
				State = 55;
				outMethod();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermSeqContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MulTermContext[] mulTerm() {
			return GetRuleContexts<MulTermContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MulTermContext mulTerm(int i) {
			return GetRuleContext<MulTermContext>(i);
		}
		public TermSeqContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_termSeq; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTermSeq(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermSeqContext termSeq() {
		TermSeqContext _localctx = new TermSeqContext(Context, State);
		EnterRule(_localctx, 4, RULE_termSeq);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 58;
					mulTerm(0);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 61;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MulTermContext : ParserRuleContext {
		public MulTermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mulTerm; } }
	 
		public MulTermContext() { }
		public virtual void CopyFrom(MulTermContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ListUnaryOperationContext : MulTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public MulTermContext mulTerm() {
			return GetRuleContext<MulTermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListUnaryOpContext listUnaryOp() {
			return GetRuleContext<ListUnaryOpContext>(0);
		}
		public ListUnaryOperationContext(MulTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListUnaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForEachLeftTermContext : MulTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public MulTermContext mulTerm() {
			return GetRuleContext<MulTermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForEachBlockContext forEachBlock() {
			return GetRuleContext<ForEachBlockContext>(0);
		}
		public ForEachLeftTermContext(MulTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForEachLeftTerm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForEachRightTermContext : MulTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public MulTermContext mulTerm() {
			return GetRuleContext<MulTermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BinaryOpContext binaryOp() {
			return GetRuleContext<BinaryOpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermSeqContext termSeq() {
			return GetRuleContext<TermSeqContext>(0);
		}
		public ForEachRightTermContext(MulTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForEachRightTerm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BinaryOperationContext : MulTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public MulTermContext mulTerm() {
			return GetRuleContext<MulTermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BinaryOpContext binaryOp() {
			return GetRuleContext<BinaryOpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AtomTermContext atomTerm() {
			return GetRuleContext<AtomTermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RTL() { return GetToken(PrimeParser.RTL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermSeqContext termSeq() {
			return GetRuleContext<TermSeqContext>(0);
		}
		public BinaryOperationContext(MulTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AtomContext : MulTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtomTermContext atomTerm() {
			return GetRuleContext<AtomTermContext>(0);
		}
		public AtomContext(MulTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtom(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumericUnaryOperationContext : MulTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public MulTermContext mulTerm() {
			return GetRuleContext<MulTermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumUnaryOpContext numUnaryOp() {
			return GetRuleContext<NumUnaryOpContext>(0);
		}
		public NumericUnaryOperationContext(MulTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumericUnaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MulTermContext mulTerm() {
		return mulTerm(0);
	}

	private MulTermContext mulTerm(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		MulTermContext _localctx = new MulTermContext(Context, _parentState);
		MulTermContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_mulTerm, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new AtomContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;

			State = 64;
			atomTerm();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 87;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 85;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
					case 1:
						{
						_localctx = new NumericUnaryOperationContext(new MulTermContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mulTerm);
						State = 66;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 67;
						numUnaryOp();
						}
						break;
					case 2:
						{
						_localctx = new ListUnaryOperationContext(new MulTermContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mulTerm);
						State = 68;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 69;
						listUnaryOp();
						}
						break;
					case 3:
						{
						_localctx = new BinaryOperationContext(new MulTermContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mulTerm);
						State = 70;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 71;
						binaryOp();
						State = 75;
						ErrorHandler.Sync(this);
						switch (TokenStream.LA(1)) {
						case T__2:
						case T__3:
						case T__4:
						case INT:
						case OP_VAR1:
						case OP_VAR2:
						case OP_VAR3:
						case OP_READ_LIST:
						case OP_READ_STR:
							{
							State = 72;
							atomTerm();
							}
							break;
						case RTL:
							{
							State = 73;
							Match(RTL);
							State = 74;
							termSeq();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					case 4:
						{
						_localctx = new ForEachLeftTermContext(new MulTermContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mulTerm);
						State = 77;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 78;
						forEachBlock();
						}
						break;
					case 5:
						{
						_localctx = new ForEachRightTermContext(new MulTermContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mulTerm);
						State = 79;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 80;
						binaryOp();
						State = 81;
						Match(T__0);
						State = 82;
						termSeq();
						State = 83;
						Match(T__1);
						}
						break;
					}
					} 
				}
				State = 89;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class AtomTermContext : ParserRuleContext {
		public AtomTermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atomTerm; } }
	 
		public AtomTermContext() { }
		public virtual void CopyFrom(AtomTermContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NullaryOperationContext : AtomTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public NullaryOpContext nullaryOp() {
			return GetRuleContext<NullaryOpContext>(0);
		}
		public NullaryOperationContext(AtomTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNullaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParensContext : AtomTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermSeqContext termSeq() {
			return GetRuleContext<TermSeqContext>(0);
		}
		public ParensContext(AtomTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParens(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PositiveInfinityContext : AtomTermContext {
		public PositiveInfinityContext(AtomTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPositiveInfinity(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntegerContext : AtomTermContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(PrimeParser.INT, 0); }
		public IntegerContext(AtomTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInteger(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NegativeInfinityContext : AtomTermContext {
		public NegativeInfinityContext(AtomTermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPrimeVisitor<TResult> typedVisitor = visitor as IPrimeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNegativeInfinity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtomTermContext atomTerm() {
		AtomTermContext _localctx = new AtomTermContext(Context, State);
		EnterRule(_localctx, 8, RULE_atomTerm);
		int _la;
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
				_localctx = new IntegerContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				Match(INT);
				}
				break;
			case T__2:
				_localctx = new NegativeInfinityContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 91;
				Match(T__2);
				}
				break;
			case T__3:
				_localctx = new PositiveInfinityContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 92;
				Match(T__3);
				}
				break;
			case OP_VAR1:
			case OP_VAR2:
			case OP_VAR3:
			case OP_READ_LIST:
			case OP_READ_STR:
				_localctx = new NullaryOperationContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 93;
				nullaryOp();
				}
				break;
			case T__4:
				_localctx = new ParensContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 94;
				Match(T__4);
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 63672L) != 0)) {
					{
					State = 95;
					termSeq();
					}
				}

				State = 98;
				Match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
